# Bergtalzug

./: .gitignore  .pre-commit-config.yaml  Dockerfile  EaxmpleDockerfile  README.md  example.py  mise.ci.toml  mise.toml  pyproject.toml
.github/workflows/: docker.yaml  push_image.yaml  release.yaml  test.yaml
src/bergtalzug/: __init__.py  etl_pipeline.py
tests/: conftest.py  test_config.py  test_etl_pipeline.py  test_handler_validation.py  test_item_tracker.py  test_models.py  test_pipeline_workers.py  test_properties.py
tests/performance_tests/: test_throughput.py
